<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/panelBackground"
            android:fadeScrollbars="true"
            android:isScrollContainer="true"
            android:keepScreenOn="false"
            app:layout_scrollFlags="scroll">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center"
                    android:maxLength="50"
                    android:maxLines="2"
                    android:text="@string/product_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:fontFamily="@font/roboto_mono_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_image" />

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="@android:dimen/thumbnail_height"
                    android:layout_height="@android:dimen/thumbnail_width"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:contentDescription="@string/product_image_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/product" />

                <TextView
                    android:id="@+id/amazon_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/amazon_price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <ImageView
                    android:id="@+id/amazon"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:contentDescription="@string/amazon_image_description"
                    app:layout_constraintBottom_toBottomOf="@+id/amazon_price"
                    app:layout_constraintEnd_toStartOf="@+id/amazon_price"
                    app:layout_constraintTop_toTopOf="@+id/amazon_price"
                    app:srcCompat="@drawable/ic_icons8_amazon" />

                <ImageView
                    android:id="@+id/ebay"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:contentDescription="@string/ebay_image_description"
                    app:layout_constraintBottom_toBottomOf="@+id/ebay_price"
                    app:layout_constraintEnd_toStartOf="@+id/ebay_price"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toTopOf="@+id/ebay_price"
                    app:srcCompat="@drawable/ic_icons8_ebay" />

                <Button
                    android:id="@+id/purchase_button"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toTopOf="@+id/divider4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/ebay_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/ebay_price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toEndOf="@+id/purchase_button"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/badpoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:maxLength="500"
                    android:maxLines="3"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/badpoints"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorSecondaryText"
                    app:fontFamily="@font/roboto_mono_medium"
                    app:layout_constraintEnd_toEndOf="@+id/important_points"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="@+id/important_points"
                    app:layout_constraintTop_toBottomOf="@+id/goodpoints" />

                <TextView
                    android:id="@+id/goodpoints"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="24dp"
                    android:includeFontPadding="true"
                    android:maxLength="500"
                    android:maxLines="3"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/goodpoints"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorSecondaryText"
                    app:fontFamily="@font/roboto_mono_medium"
                    app:layout_constraintEnd_toEndOf="@+id/important_points"
                    app:layout_constraintStart_toStartOf="@+id/important_points"
                    app:layout_constraintTop_toBottomOf="@+id/important_points" />

                <TextView
                    android:id="@+id/important_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="152dp"
                    android:gravity="center"
                    android:text="@string/important_points"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:fontFamily="@font/roboto_mono_medium"
                    app:layout_constraintEnd_toEndOf="@+id/divider"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="@+id/divider"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/note"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    app:fontFamily="@font/roboto_mono_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/badpoints"
                    app:layout_constraintVertical_bias="1.0" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_name" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="24dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@+id/important_points"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@+id/note"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/badpoints" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
